--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-loading-skeleton": "^3.5.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.3.0",
+    "react-quill-new": "^3.8.3",
+    "react-quilljs": "^2.0.5",
     "rehype-raw": "^7.0.0",
     "slim-select": "^3.3.0",
     "swiper": "^11.2.10"
